--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ h1{
   display: flex;
   justify-content: center;
   border:2px solid gray;
-  margin: 0 20em 0 20em;
+ max-width: 100%;
   
 }
 
@@ -63,7 +63,7 @@ h1{
   background-image: url("https://raw.githubusercontent.com/LambdaSchool/web-sprint-challenge-single-page-applications/main/Assets/Pizza.jpg");
  display: flex;
  height:30em;
-  width:55em;
+max-width: 100%;
  
 }
 
@@ -79,22 +79,103 @@ h1{
 }
 
 .space a{
+  display: flex;
+  flex-direction: row;
  text-decoration: none;
- margin-left: 19rem;
+ align-content: center;
+}
+.space2 a{
+  display:flex;
+  flex-direction: row;
+}
+.space3 a{
+  display: flex;
+  flex-direction: row;
+}
+.label {
+  display: flex;
+  margin-top: 50%;
+}
+.places1 {
+  display: flex;
+background-image: url(https://images.unsplash.com/photo-1585159183446-0fc0eaf9e57c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bWNkb25hbGRzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60);
+max-width: 35%;
+height: 20rem;
+}
+.places2 {
+  display: flex;
+  background-image: url(https://images.unsplash.com/photo-1574547070285-7eba5c706ec6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8V2F3YXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=400&q=60);
+  max-width: 35%;
+  height: 20rem;
+}
+.places3 {
+background-image: url(https://images.unsplash.com/photo-1545231027-637d2f6210f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8c3RhcmJ1Y2tzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60);
+max-width: 35%;
+height: 20rem;
 }
 
 #pizza-form{
 display: flex;
 justify-content: center;
-margin-top: 16rem;
 flex-direction: column;
 margin-left: 19rem;
 margin-right: 19rem;
-border:3px black solid
+border:3px black solid;
+height:100%;
+background-image: url(https://images.unsplash.com/photo-1622544841807-9ca22fddaba2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGxpbmUlMjBwYXBlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=400&q=60);
+}
+#ownpizza {
+  background-image: url(https://images.unsplash.com/photo-1604382355076-af4b0eb60143?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fHBpenphfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60);
+  max-width: 100%;
+  height: 25rem;
+}
+#toppings-wrapper3{
+  display: flex;
+  flex-direction: row;
+
+}
+#toppings-wrapper2{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-left: 40%;
+
+}
+#toppings-wrapper{
+display: flex;
+flex-direction: column;
+
+
+}
+#pyt {
+  display:flex;
+  align-content: space-around;
+}
+#sauces1 {
+display: flex;
+flex-direction: column;
 }
 
 .array{
-  margin-left: 39rem;
-  margin-top: 3rem;
-  
+display: flex;
+flex-direction: column;
+align-content: flex-start;
+margin-left: 0;
+margin-top: 20%;
+border:3px black solid,
+}
+#sauce-wrapper{
+  display: flex;
+  flex-direction: column;
+}
+
+.pizza-container {
+  display:flex;
+  background-image: url(https://media.istockphoto.com/id/655721910/photo/pizza-time.jpg?b=1&s=170667a&w=0&k=20&c=1SrrclOgH0JsaikJBJAYBpuxz-Pr7wcUTY0Zx88CoWU=);
+  max-width: 100%;
+  max-height: 100%;
+
+  height: 100rem;
+  background-repeat: no-repeat;
+  background-position: 50%;
 }
