--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ code {
   width: 100%;
 }
 .store-header {
-  color: #1c5d76;
+  color: #F29727;
 }
 
 nav {
@@ -38,7 +38,7 @@ nav {
 
 .nav-links a {
   text-decoration: none;
-  color: #1c5d76;
+  color: #F29727;
   font-weight: bold;
   margin-right: 8px;
 }
@@ -48,5 +48,51 @@ nav {
 }
 
 .nav-links a.active {
-  border-bottom: 1px solid #1c5d76;
+  border-bottom: 1px solid #F29727;
+}
+
+.home-wrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
+.home-image {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
+
+.shop-button.md-button {
+  margin-top: -16px;
+  width: 115px;
+}
+
+.md-button {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 0 8px;
+  border: none;
+  border-radius: 2px;
+  padding: 0 16px;
+  min-width: 64px;
+  height: 36px;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #F29727;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  font-family: "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui,
+    -apple-system;
+  font-size: 14px;
+  font-weight:600;
+  line-height: 36px;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
 }
